WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175780
[GTK][WPE][GSTREAMER_GL] Overriden virtual function not marked “override” in MediaPlayerPrivateGStreamerBase.h
https://bugs.webkit.org/show_bug.cgi?id=175780
Summary
[GTK][WPE][GSTREAMER_GL] Overriden virtual function not marked “override” in ...
Adrian Perez
Reported
2017-08-21 12:27:24 PDT
The following warning is generated when building with Clang: In file included from ../../Source/WebCore/platform/graphics/MediaPlayer.cpp:55: In file included from ../../Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:30: ../../Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:152:45: warning: 'proxy' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] RefPtr<TextureMapperPlatformLayerProxy> proxy() const; ^ ../../Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerProxyProvider.h:36:53: note: overridden virtual function is here virtual RefPtr<TextureMapperPlatformLayerProxy> proxy() const = 0; ^
Attachments
Patch
(1.51 KB, patch)
2017-08-21 12:29 PDT
,
Adrian Perez
annulen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2017-08-21 12:29:05 PDT
Created
attachment 318660
[details]
Patch
Konstantin Tokarev
Comment 2
2017-08-21 12:40:44 PDT
Comment on
attachment 318660
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=318660&action=review
> Source/WebCore/ChangeLog:3 > + [GTK][WPE][GSTREAMER_GL] [GTK][WPE] Overriden virtual function not marked âoverrideâ in MediaPlayerPrivateGStreamerBase.h
ETOOMANYTAGS
Adrian Perez
Comment 3
2017-08-21 13:04:29 PDT
(In reply to Konstantin Tokarev from
comment #2
)
> Comment on
attachment 318660
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=318660&action=review
> > > Source/WebCore/ChangeLog:3 > > + [GTK][WPE][GSTREAMER_GL] [GTK][WPE] Overriden virtual function not marked âoverrideâ in MediaPlayerPrivateGStreamerBase.h > > ETOOMANYTAGS
Ouch, I'll remove the extra tags before landing. Thanks!
Adrian Perez
Comment 4
2017-08-21 13:17:00 PDT
Committed
r220978
: <
http://trac.webkit.org/changeset/220978
>
Radar WebKit Bug Importer
Comment 5
2017-08-21 13:17:44 PDT
<
rdar://problem/33997746
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug