[GTK][WPE][GSTREAMER_GL] Overriden virtual function not marked “override” in MediaPlayerPrivateGStreamerBase.h https://bugs.webkit.org/show_bug.cgi?id=175780

Reviewed by Konstantin Tokarev.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h: Add missing "override" qualifier.

Canonical link: https://commits.webkit.org/192437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220978 268f45cc-cd09-0410-ab3c-d52691b4dbfc