Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h
@@ -149,7 +149,7 @@ protected:
 
 #if USE(TEXTURE_MAPPER_GL)
     void updateTexture(BitmapTextureGL&, GstVideoInfo&);
-    RefPtr<TextureMapperPlatformLayerProxy> proxy() const;
+    RefPtr<TextureMapperPlatformLayerProxy> proxy() const override;
     void swapBuffersIfNeeded() override;
     void pushTextureToCompositor();
 #endif
